--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,11 +6,15 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "nodemon server.ts"
+    "dev": "nodemon server.ts",
+    "lint": "eslint . --cache --ext .js,.jsx,.ts,.tsx"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.18",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
