--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint . --cache --ext .js,.jsx,.ts,.tsx"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.18",
+    "@types/pg": "^8.6.4",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
@@ -21,8 +24,13 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@chxru/types": "1.0.0",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "morgan": "^1.10.0"
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.7.3"
   }
 }
