--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,15 @@ services:
     volumes:
       - surge-assignment-chxru:/var/lib/postgresql/data
 
+  reverse-proxy:
+    image: traefik:2.6
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "8080:8080"
+    volumes:
+      - ./traefik:/etc/traefik
+
 volumes:
   surge-assignment-chxru:
 
