--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,11 +9,13 @@
     "build": "tsc --build",
     "clean": "tsc --build --clean",
     "dev": "nodemon server.ts",
-    "lint": "eslint . --cache --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --cache --ext .js,.jsx,.ts,.tsx",
+    "test": "jest --watch --detectOpenHandles"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.18",
@@ -21,7 +23,9 @@
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   },
